Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -3296,7 +3296,7 @@ msgstr "Europe de l'ouest"
 
 #: libraries/mysql_charsets.lib.php:280
 msgid "Romanian"
-msgstr "roumain"
+msgstr "Roumain"
 
 #: libraries/mysql_charsets.lib.php:283
 msgid "Slovak"
