--- a/po/fr.po
+++ b/po/fr.po
@@ -3308,7 +3308,7 @@ msgstr "Slovène"
 
 #: libraries/mysql_charsets.lib.php:289
 msgid "Spanish"
-msgstr "espagnol"
+msgstr "Espagnol"
 
 #: libraries/mysql_charsets.lib.php:292
 msgid "Traditional Spanish"
