--- a/po/fr.po
+++ b/po/fr.po
@@ -3354,7 +3354,7 @@ msgstr "Baltique"
 
 #: libraries/mysql_charsets.lib.php:359
 msgid "Armenian"
-msgstr "arménien"
+msgstr "Arménien"
 
 #: libraries/mysql_charsets.lib.php:365
 msgid "Cyrillic"
