--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-07-01 19:50+0200\n"
+"PO-Revision-Date: 2010-07-01 19:51+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -4898,7 +4898,7 @@ msgstr "Base de données pour cet utilisateur"
 #: server_privileges.php:2037
 msgctxt "Create none database for user"
 msgid "None"
-msgstr "aucune"
+msgstr "Aucune"
 
 #: server_privileges.php:2038
 msgid "Create database with same name and grant all privileges"
