--- a/po/fr.po
+++ b/po/fr.po
@@ -6336,7 +6336,7 @@ msgstr "Taille horizontale pour un textarea"
 
 #: setup/lib/messages.inc.php:39
 msgid "Number of rows for CHAR/VARCHAR textareas"
-msgstr "(colonnes CHAR/VARCHAR)"
+msgstr "Nombre de lignes pour les textareas CHAR/VARCHAR)"
 
 #: setup/lib/messages.inc.php:40
 msgid "CHAR textarea rows"
