--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-07-01 19:55+0200\n"
+"PO-Revision-Date: 2010-07-01 19:56+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -6913,7 +6913,7 @@ msgstr "Fenêtre-cible pour la page ouverte lors d'un clic sur le logo"
 
 #: setup/lib/messages.inc.php:185
 msgid "Highlight server under the mouse cursor"
-msgstr "...dans le panneau de navigation"
+msgstr "Faire ressortir le nom du serveur dans le panneau de navigation"
 
 #: setup/lib/messages.inc.php:186
 msgid "Enable highlighting"
