add missing validation for TextareaRows fix warning in FormDisplay while importing settings

--- a/.gsoc/todo.txt
+++ b/.gsoc/todo.txt
@@ -2,7 +2,4 @@ restore cache'ing in phpmyadmin.css.php
 make CSS for darkblue_orange
 check input escaping, $cfg is no longer safe to use
 
-preference:
-- synchronize language, theme ThemeDefault
-
-allow to import ThemeDefault
+local storage - autoload?
