--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,13 +4,13 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-03 09:00-0400\n"
-"PO-Revision-Date: 2010-03-21 05:17+0200\n"
-"Last-Translator: Maurício Meneghini Fauth <mauriciofauth@gmail.com>\n"
+"PO-Revision-Date: 2010-07-13 23:52+0200\n"
+"Last-Translator: William  Bachion <william@bachiondesign.com>\n"
 "Language-Team: brazilian_portuguese <pt_BR@li.org>\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Pootle 2.0.1\n"
 
@@ -8395,316 +8395,3 @@ msgstr "Nome da VISÃO"
 #, fuzzy
 msgid "Rename view to"
 msgstr "Renomear a tabela para "
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Adicionar novo campo"
-
-#~ msgid "Field"
-#~ msgstr "Campo"
-
-#~ msgid "Records"
-#~ msgstr "Registros"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Campos terminados por"
-
-#~ msgid "Fields"
-#~ msgstr "Campos"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "Campo %s foi deletado"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "Ver imagem/jpeg: em linha"
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "\"compactado com zip\""
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "\"compactado com gzip\""
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "\"compactado com bzip\""
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Adicionar comentário pessoal no cabeçalho (\\n quebra linhas)"
-
-#~ msgid "and"
-#~ msgstr "e"
-
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Desabilitado"
-
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Habilitado"
-
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Reparar"
-
-#~ msgid "Calendar"
-#~ msgstr "Calendário"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "Compatível com MySQL&nbsp;4.0"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr "Não foi possível carregar configuração padrão de: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Criar um índice em&nbsp;%s&nbsp;colunas"
-
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Criar tabela"
-
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "Nenhum"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Limpar a tabela (\"LIMPAR\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Índice de servidor inválido: \"%s\""
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Descrição"
-
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "Nenhum"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "Esquema do Banco de Dados \"%s\" - Página %s"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "A tabela \"%s\" não existe!"
-
-#~ msgid "running on %s"
-#~ msgstr "Rodando em %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr "A escala é muito pequena para ajustar o esquema em uma página"
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "Não pôde iniciar a sessão sem erros, cheque os erros ocorridos nos logs "
-#~ "do PHP e/ou do seu servidor web e configure a instalação do PHP "
-#~ "corretamente."
-
-#, fuzzy
-#~| msgid ""
-#~| "However on last run no data has been parsed, this usually means "
-#~| "phpMyAdmin won't be able to finish this import unless you increase php "
-#~| "time limits."
-#~ msgid ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won"
-#~ msgstr ""
-#~ "Entretanto na última vez nenhum dado foi passado, isso normalmente "
-#~ "significa que o phpMyAdmin não é capaz de finalizar essa importação à "
-#~ "menos que você aumente o tempo limite do PHP."
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "Nenhum"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "Nenhum"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr "Conceder todos os privilégios no nome coringa (nome_do_usuário_%)"
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "A tabela \"%s\" não existe!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr "Não foi possível carregar configuração padrão de: \"%1$s\""
-
-#, fuzzy
-#~| msgid "Invalid hostname for server %1$s. Please review your configuration."
-#~ msgid "Invalid hostname for server %1. Please review your configuration."
-#~ msgstr ""
-#~ "Nome de serivdor inválido para o servidor %1$s. Verifique suas "
-#~ "configurações."
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "Erro ao renomear tabela %1$s para %2$s"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr "não carregou extensão %s,<br />verifique a configurações do php"
-
-#, fuzzy
-#~ msgid "(or the local MySQL server"
-#~ msgstr "Não foi possível se logar no servidor MySQL"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "Talvez tenha encontrado um bug no analizador (parser) do SQL. Analise a "
-#~ "sua Consulta SQL com atenção, e verifique se as aspas estão corretas e "
-#~ "não estão desencontradas. Outra possibilidade de falha é o fato de estar "
-#~ "tentando subir um arquivo com saída binária de uma área de texto citada. "
-#~ "Pode também experimentar a sua consulta SQL no prompt de comandos do "
-#~ "MySQL. A saída de erro do MySQL, isto se existir alguma, também poderá "
-#~ "ajudar a diagnosticar o problema. Se continuar a ter problemas ou se o "
-#~ "analisador (parser) falhar onde a interface da linha de comandos tiver "
-#~ "sucesso, reduza por favor a entrada da consulta SQL até aquele que causou "
-#~ "o problema, e envie o relatório de bug com os dados do chunk da seção "
-#~ "CORTE abaixo:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "Dados CSV"
-
-#~ msgid "Copy"
-#~ msgstr "Copiar"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "Apagar usuário e depois recarregar os privilégios."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "Esse é o caminho mais claro, mas recarregar os privilégios pode demorar "
-#~ "um pouco."
-
-#~ msgid "has been altered."
-#~ msgstr "foi alterado."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid "Internet Explorer does not support this function."
-#~ msgstr "Internet Explorer não suporta esta função."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "O usuário &quot;apagado&quot; ainda podera continuar acessando o servidor "
-#~ "normalmente até que os privilégios sejam recarregados."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Apenas apagar o usuário da tabela de privilégios"
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Permitir rodar \"stored procedures\"; Sem efeitos nesta versão do MySQL."
-
-#~ msgid "Process list"
-#~ msgstr "Lista de processos"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Recarregar privilégios"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "Os usuários manterão o privilégio de USAGE até que os privilégios sejam "
-#~ "recarregados."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "Dados nativos do MS Excel"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Selecionar Todos"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Selecionar Todos"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Inserir"
-
-#, fuzzy
-#~| msgid "Update Query"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Atualizar a consulta SQL"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Remover"
-
-#~ msgid "%1$d row(s) affected."
-#~ msgstr "%1$d linha(s) afetadas."
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "Jan0"
-
-#~ msgid "Jan1"
-#~ msgstr "Jan1"
-
-#~ msgid "Jan2"
-#~ msgstr "Jan2"
