--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-03 09:00-0400\n"
-"PO-Revision-Date: 2010-07-13 23:52+0200\n"
+"PO-Revision-Date: 2010-07-13 23:53+0200\n"
 "Last-Translator: William  Bachion <william@bachiondesign.com>\n"
 "Language-Team: brazilian_portuguese <pt_BR@li.org>\n"
 "Language: pt_BR\n"
@@ -8357,7 +8357,7 @@ msgstr ""
 
 #: themes.php:42
 msgid "Get more themes!"
-msgstr ""
+msgstr "Obter mais temas!"
 
 #: transformation_overview.php:25
 msgid "Available MIME types"
