--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-14 14:45+0200\n"
+"PO-Revision-Date: 2010-07-14 14:46+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -42,7 +42,7 @@ msgstr ""
 #: libraries/common.lib.php:2838 libraries/db_links.inc.php:75
 #: libraries/tbl_links.inc.php:63
 msgid "Search"
-msgstr ""
+msgstr "ئىزدەش"
 
 #: browse_foreigners.php:153 db_operations.php:385 db_operations.php:429
 #: db_operations.php:499 db_operations.php:609 db_search.php:362
