--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-14 14:49+0200\n"
+"PO-Revision-Date: 2010-07-14 14:52+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -92,7 +92,7 @@ msgstr "مۇشۇ قىممەتنى ئىشلىتىش"
 #: db_create.php:46
 #, php-format
 msgid "Database %1$s has been created."
-msgstr ""
+msgstr "%1$s  ساندان غەلبىلىك قۇرۇلدى"
 
 #: db_datadict.php:49 db_operations.php:378
 msgid "Database comment: "
