--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-14 14:52+0200\n"
+"PO-Revision-Date: 2010-07-14 14:53+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -96,7 +96,7 @@ msgstr "%1$s  ساندان غەلبىلىك قۇرۇلدى"
 
 #: db_datadict.php:49 db_operations.php:378
 msgid "Database comment: "
-msgstr ""
+msgstr "ساندان ئىزاھاتى"
 
 #: db_datadict.php:165 libraries/tbl_properties.inc.php:724
 #: pdf_schema.php:1236 tbl_operations.php:347 tbl_printview.php:129
