--- a/po/ug.po
+++ b/po/ug.po
@@ -124,7 +124,7 @@ msgstr "سۆزلەم"
 #: tbl_printview.php:312 tbl_select.php:135 tbl_structure.php:178
 #: tbl_structure.php:659 tbl_tracking.php:274 tbl_tracking.php:321
 msgid "Type"
-msgstr ""
+msgstr "تۈرى"
 
 #: db_datadict.php:177 libraries/Index.class.php:449
 #: libraries/export/htmlword.php:246 libraries/export/latex.php:360
