Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -133,7 +133,7 @@ msgstr "تۈرى"
 #: pdf_schema.php:1286 tbl_change.php:322 tbl_printview.php:144
 #: tbl_structure.php:181 tbl_tracking.php:276 tbl_tracking.php:327
 msgid "Null"
-msgstr ""
+msgstr "بوش"
 
 #: db_datadict.php:178 db_structure.php:501 libraries/export/htmlword.php:247
 #: libraries/export/latex.php:360 libraries/export/odt.php:303
