--- a/po/ug.po
+++ b/po/ug.po
@@ -141,7 +141,7 @@ msgstr "بوش"
 #: pdf_schema.php:1266 pdf_schema.php:1287 tbl_printview.php:145
 #: tbl_structure.php:182 tbl_tracking.php:277
 msgid "Default"
-msgstr ""
+msgstr "ئەندىز"
 
 #: db_datadict.php:182 libraries/export/htmlword.php:249
 #: libraries/export/latex.php:362 libraries/export/odt.php:307
