Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -168,7 +168,7 @@ msgstr "ئىزاھلار"
 #: server_privileges.php:2187 sql.php:132 sql.php:194 tbl_printview.php:228
 #: tbl_structure.php:350 tbl_tracking.php:337 tbl_tracking.php:342
 msgid "No"
-msgstr ""
+msgstr "يوق"
 
 #: db_datadict.php:267 libraries/Index.class.php:360
 #: libraries/Index.class.php:385 libraries/export/htmlword.php:322
