--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-14 14:59+0200\n"
+"PO-Revision-Date: 2010-07-14 15:00+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -202,7 +202,7 @@ msgstr "سانداندا جەدۋەل يوق"
 
 #: db_export.php:43 db_search.php:344 server_export.php:27
 msgid "Select All"
-msgstr ""
+msgstr "ھەممىنى تاللاش"
 
 #: db_export.php:45 db_search.php:347 server_export.php:29
 msgid "Unselect All"
