--- a/ChangeLog
+++ b/ChangeLog
@@ -19,7 +19,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #3023507 [core] No result set display from stored procedure SELECT
 - bug [export] CSV for MS Excel (Windows) should have semi-colon as separator
 - [core] Update library PHPExcel to version 1.7.3c
-- bug #2994885 [import] Convert Excel column name correctly
+- bug #2994885, bug #3029168 [import] Convert Excel column name correctly
 
 3.3.4.0 (2010-06-28)
 - bug #2996161 [import] properly escape import value
