--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 04:48+0200\n"
+"PO-Revision-Date: 2010-07-15 04:49+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -206,7 +206,7 @@ msgstr "ھەممىنى تاللاش"
 
 #: db_export.php:45 db_search.php:347 server_export.php:29
 msgid "Unselect All"
-msgstr ""
+msgstr "ھەممە تاللاشنى قالدۇرۇش"
 
 #: db_operations.php:38 tbl_create.php:54
 msgid "The database name is empty!"
