--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 04:52+0200\n"
+"PO-Revision-Date: 2010-07-15 04:53+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -220,7 +220,7 @@ msgstr "%s ساندان ئىسمى %s غا ئۆزگەرتىلدى."
 #: db_operations.php:240
 #, php-format
 msgid "Database %s has been copied to %s"
-msgstr ""
+msgstr "%s ساندان %s غا كۆچۈرۈلدى"
 
 #: db_operations.php:412
 msgid "Rename database to"
