--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 04:53+0200\n"
+"PO-Revision-Date: 2010-07-15 04:55+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -224,7 +224,7 @@ msgstr "%s ساندان %s غا كۆچۈرۈلدى"
 
 #: db_operations.php:412
 msgid "Rename database to"
-msgstr ""
+msgstr "ئۆزگەرتىلگەن ساندان ئىسمى"
 
 #: db_operations.php:417 server_processlist.php:57
 msgid "Command"
