--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 04:55+0200\n"
+"PO-Revision-Date: 2010-07-15 04:56+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -232,7 +232,7 @@ msgstr "بۇيرۇق"
 
 #: db_operations.php:429 tbl_change.php:1142
 msgid "and then"
-msgstr ""
+msgstr "كېيىن"
 
 #: db_operations.php:455
 msgid "Copy database to"
