Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -264,7 +264,7 @@ msgstr "قوشۇلغىنى %s"
 #: db_operations.php:479 libraries/export/sql.php:78 tbl_operations.php:299
 #: tbl_operations.php:538
 msgid "Add AUTO_INCREMENT value"
-msgstr ""
+msgstr "AUTO_INCREMENT قوشۇش"
 
 #: db_operations.php:483 tbl_operations.php:545
 msgid "Add constraints"
