--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 05:02+0200\n"
+"PO-Revision-Date: 2010-07-15 05:03+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -272,7 +272,7 @@ msgstr "مەجبۇرى قوشۇش"
 
 #: db_operations.php:496
 msgid "Switch to copied database"
-msgstr ""
+msgstr "كۆپەيتىلگەن ساندانغا كۆچۈش"
 
 #: db_operations.php:537
 msgid "BLOB Repository"
