--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 05:10+0200\n"
+"PO-Revision-Date: 2010-07-15 05:11+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -291,7 +291,7 @@ msgstr "ئېچىلدى"
 
 #: db_operations.php:552
 msgid "Disable"
-msgstr ""
+msgstr "تاقاش"
 
 #: db_operations.php:562
 msgid "Damaged"
