--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 05:11+0200\n"
+"PO-Revision-Date: 2010-07-15 05:13+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -300,7 +300,7 @@ msgstr "بۇزۇلغان"
 #: db_operations.php:566
 msgctxt "BLOB repository"
 msgid "Repair"
-msgstr ""
+msgstr "ئوڭشاش"
 
 #: db_operations.php:574
 msgctxt "BLOB repository"
