Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -305,7 +305,7 @@ msgstr "ئوڭشاش"
 #: db_operations.php:574
 msgctxt "BLOB repository"
 msgid "Disabled"
-msgstr ""
+msgstr "تاقالدى"
 
 #: db_operations.php:578
 msgid "Enable"
