--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 05:44+0200\n"
+"PO-Revision-Date: 2010-07-15 05:45+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -441,7 +441,7 @@ msgstr "ياكى"
 
 #: db_qbe.php:507
 msgid "Modify"
-msgstr ""
+msgstr "ئۆزگەرتىش"
 
 #: db_qbe.php:584
 msgid "Add/Delete criteria rows"
