--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 05:46+0200\n"
+"PO-Revision-Date: 2010-07-15 05:47+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -453,7 +453,7 @@ msgstr "سۆزلەم قوشۇش\\ئۆچۈرۈش"
 
 #: db_qbe.php:609 db_qbe.php:634
 msgid "Update Query"
-msgstr ""
+msgstr "يېڭلاش"
 
 #: db_qbe.php:617
 msgid "Use Tables"
