--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 05:53+0200\n"
+"PO-Revision-Date: 2010-07-15 05:54+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -485,7 +485,7 @@ msgstr "بارلىق سۆزلەر"
 
 #: db_search.php:82 db_search.php:313
 msgid "the exact phrase"
-msgstr ""
+msgstr "ئېنىق ماسلىق"
 
 #: db_search.php:83 db_search.php:314
 msgid "as regular expression"
