--- a/po/ug.po
+++ b/po/ug.po
@@ -507,7 +507,7 @@ msgstr "%s ئۇيغۇنلۇق تىپىلدى، جەدۋىلى <i>%s</i>"
 #: libraries/mult_submits.inc.php:116 libraries/tbl_links.inc.php:50
 #: tbl_structure.php:37 tbl_structure.php:49 tbl_structure.php:467
 msgid "Browse"
-msgstr ""
+msgstr "كۆزەت"
 
 #: db_search.php:272 libraries/display_tbl.lib.php:1165
 #: libraries/display_tbl.lib.php:2056 libraries/sql_query_form.lib.php:470
