--- a/po/ug.po
+++ b/po/ug.po
@@ -524,7 +524,7 @@ msgstr ""
 
 #: db_search.php:299
 msgid "Search in database"
-msgstr ""
+msgstr "سانداندىن ئىزدەش"
 
 #: db_search.php:302
 msgid "Word(s) or value(s) to search for (wildcard: \"%\"):"
