Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -562,7 +562,7 @@ msgstr "قىستۇرۇش"
 #: libraries/tbl_links.inc.php:56 pmd_general.php:134
 #: server_privileges.php:593 server_replication.php:315 tbl_tracking.php:269
 msgid "Structure"
-msgstr ""
+msgstr "تۈزۈلىشى"
 
 #: db_structure.php:84 db_structure.php:85 db_structure.php:97
 #: db_structure.php:98 db_structure.php:110 db_structure.php:111
