Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -573,7 +573,7 @@ msgstr "تۈزۈلىشى"
 #: server_databases.php:352 tbl_structure.php:27 tbl_structure.php:151
 #: tbl_structure.php:152 tbl_structure.php:471
 msgid "Drop"
-msgstr ""
+msgstr "ئۆچۈرۈش"
 
 #: db_structure.php:86 db_structure.php:87 db_structure.php:99
 #: db_structure.php:100 db_structure.php:112 db_structure.php:113
