Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 06:04+0200\n"
+"PO-Revision-Date: 2010-07-15 06:05+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -585,7 +585,7 @@ msgstr "تازىلاش"
 #: db_structure.php:316 libraries/tbl_links.inc.php:100
 #, php-format
 msgid "Table %s has been emptied"
-msgstr ""
+msgstr " %s جەدۋەل تازىلاندى"
 
 #: db_structure.php:326 libraries/tbl_links.inc.php:133
 #, php-format
